--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "test": "jest --watchAll",
     "start": "node index.js",
-    "dev": "npm run start-redis && nodemon index.js",
+    "dev": "npm run dev-client & npm run start-redis && nodemon index.js",
+    "devw": "npm run start-redis-w && nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
-    "start-redis": "/redis/redis-server.exe",
+    "start-redis": "redis-server --daemonize yes",
+    "start-redis-w": "/redis/redis-server.exe",
     "build-client": "parcel build client/src/index.html --out-dir client/dist",
     "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
     "clean": "rm -rf .cache client/dist"
